--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="plugin/slick.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha256-UhQQ4fxEeABh4JrcmAJ1+16id/1dnlOEVCFOxDef9Lw=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
 
     <title>Syring | Medical Clinic WordPress Theme – Medical Clinic WordPress Theme</title>
@@ -15,47 +17,47 @@
 
 <body style="overflow-x: hidden !important; ">
 
-    <div class="custom-container" style="height: 5000px;">
+    <div class="custom-container" style="overflow-x: hidden;">
 
         <!--  -->
         <section id="medicalCenter" class="medicalCenterContainer" style="margin-top: 500px;">
-                    <div class="medicalCenterText">
-                       <div class="responsivTitle">
-                        <h2 data-aos="fade-up" > Why Choose the</h2>
-                        <h2 class="color-default " data-aos="fade-up"  ">Syring Medical Center</h2>
+            <div class="medicalCenterText">
+                <div class="responsivTitle">
+                    <h2 data-aos="fade-up"> Why Choose the</h2>
+                    <h2 class="color-default " data-aos="fade-up" ">Syring Medical Center</h2>
                        </div>
-                        <p class="subTitle" data-aos="fade-up"  >Led by the joint care coordinator, our team has been
-                            hand-picked for
-                            their positive attitudes, motivational skills and a desire to provide outstanding
-                            service.</p>
-                        <ul class="medicalMenu" data-aos="fade-up"  >
-                            <li  >
+                        <p class=" subTitle" data-aos="fade-up">Led by the joint care coordinator, our team has been
+                        hand-picked for
+                        their positive attitudes, motivational skills and a desire to provide outstanding
+                        service.</p>
+                        <ul class="medicalMenu" data-aos="fade-up">
+                            <li>
                                 <i class="fas fa-check"></i>
                                 <p> Free Ambulance Transport</p>
                             </li>
-                            <li  >
+                            <li>
                                 <i class="fas fa-check"></i>
                                 <p> Highly Qualified Doctors</p>
                             </li>
-                            <li  > 
+                            <li>
                                 <i class="fas fa-check"></i>
                                 <p>24×7 Emergency Services</p>
                             </li>
-                            <li >
+                            <li>
                                 <i class="fas fa-check"></i>
                                 <p>Leading <span>Technology</span> </p>
                             </li>
-                            <li >
+                            <li>
                                 <i class="fas fa-check"></i>
                                 <p>Patient Centered Care</p>
                             </li>
                         </ul>
+                </div>
+                <div class="medicalCenterImg " data-aos="fade-up">
+                    <div class="medicalImg " data-aos="fade-up">
+                        <img src="img/bg-columns2.jpg" alt="">
                     </div>
-                    <div class="medicalCenterImg " data-aos="fade-up">
-                        <div class="medicalImg " data-aos="fade-up">
-                            <img src="img/bg-columns2.jpg" alt="">
-                        </div>
-                    </div>
+                </div>
         </section>
         <!--  -->
         <section class="medicalCounter">
@@ -121,10 +123,10 @@
                 </div>
 
             </div>
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-sm-12   col-md-6  col-lg-3 " style="padding-right: 15px;">
-                        <div class="cardDoctor">
+                        <div class="cardDoctor " data-aos="fade-up">
                             <div class="doctorContent">
                                 <div class="doctorImg">
                                     <img src="img/12822.png" alt="" srcset="">
@@ -146,7 +148,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12    col-md-6  col-lg-3 ">
-                        <div class="cardDoctor">
+                        <div class="cardDoctor" data-aos="fade-up">
                             <div class="doctorContent">
                                 <div class="doctorImg">
                                     <img src="img/287307-P6KAVP-936.png" alt="" srcset="">
@@ -168,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12   col-md-6  col-lg-3 ">
-                        <div class="cardDoctor">
+                        <div class="cardDoctor" data-aos="fade-up">
                             <div class="doctorContent">
                                 <div class="doctorImg">
                                     <img src="img/OIFDE80.png" alt="" srcset="">
@@ -190,7 +192,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12   col-md-6 col-lg-3  ">
-                        <div class="cardDoctor">
+                        <div class="cardDoctor" data-aos="fade-up">
                             <div class="doctorContent">
                                 <div class="doctorImg">
                                     <img src="img/12865.png" alt="" srcset="">
@@ -242,13 +244,13 @@
                     </div>
                     <div class="testimonialsSlider ">
                         <div class="cardTestimonials">
-                            <p>“From the moment she was wheeled through the doors of the emergency room, my fears were
-                                immediately put to rest. My eye is blur, so i can not see ”</p>
+                            <p>“I am writing this letter to thank everyone at your wonderful hospital for the exellent
+                                care that was given to me. Now i am ok, i feel comfortable width my healthy”</p>
                             <div class="testimonialsContent">
-                                <img src="img/testtimonial3-400x400.jpg" alt="">
+                                <img src="img/team1-400x400.jpg" alt="">
                                 <div class="testimonialsText">
-                                    <h5>Norman</h5>
-                                    <p>Teacher</p>
+                                    <h5>Yuneli’s Mom</h5>
+                                    <p>Worker</p>
                                 </div>
                             </div>
                             <i class="fas fa-quote-right"></i>
@@ -259,10 +261,10 @@
                             <p>“From the moment she was wheeled through the doors of the emergency room, my fears were
                                 immediately put to rest. My eye is blur, so i can not see ”</p>
                             <div class="testimonialsContent">
-                                <img src="img/testtimonial3-400x400.jpg" alt="">
+                                <img src="img/team3-400x400.jpg" alt="">
                                 <div class="testimonialsText">
-                                    <h5>Norman</h5>
-                                    <p>Teacher</p>
+                                    <h5>Rosalie</h5>
+                                    <p>Physician </p>
                                 </div>
                             </div>
                             <i class="fas fa-quote-right"></i>
@@ -273,9 +275,23 @@
                             <p>“From the moment she was wheeled through the doors of the emergency room, my fears were
                                 immediately put to rest. my eye were immediately”</p>
                             <div class="testimonialsContent">
-                                <img src="img/testtimonial3-400x400.jpg" alt="">
+                                <img src="img/testimonial2-400x400.jpg" alt="">
                                 <div class="testimonialsText">
-                                    <h5>Norman</h5>
+                                    <h5>Fabien Ricard, MD</h5>
+                                    <p>Physician Case Manager</p>
+                                </div>
+                            </div>
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                    </div>
+                    <div class="testimonialsSlider ">
+                        <div class="cardTestimonials">
+                            <p>“From the moment she was wheeled through the doors of the emergency room, my fears were
+                                immediately put to rest. my eye were immediately”</p>
+                            <div class="testimonialsContent">
+                                <img src="img/testimonial1-400x400.jpg" alt="">
+                                <div class="testimonialsText">
+                                    <h5>Ganesh</h5>
                                     <p>Teacher</p>
                                 </div>
                             </div>
@@ -299,59 +315,78 @@
 
                     </div>
                 </div>
-                <div class="multiple-items">
+                <div class="owl-carousel">
 
-             
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/6top-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Canser</p>
+                            <a href="#">
+                                6 Symptoms You Should Never Ignore </a>
+                        </div>
                     </div>
-                </div>
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/Medical-Tips-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Medical Tips</p>
+                            <a href="#">
+                                Top 10 new products of medicine that will change the wo...</a>
+                        </div>
                     </div>
-                </div>
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/blog2-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Canser</p>
+                            <a href="#">Oral Verruciform Xanthoma: A case report </a>
+                        </div>
                     </div>
-                </div>
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/MRI-scanning-370x250.jpg" alt="">
+                            <p>April 3, 2019 | MRI scanning</p>
+                            <a href="#">
+                                A strict diet can also lead to serious illnesses and di... </a>
+                        </div>
                     </div>
-                </div>
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/9359-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Canser</p>
+                            <a href="#">  Are You Living With Purpose. It Could Lengthen Your Lif...</a>
+                        </div>
                     </div>
-                </div>
-                <div class="lastestNewsSlider ">
-                    <div class="lastestNewsCard text-center ">
-                        <img src="img/6top-370x250.jpg" alt="">
-                        <p>April 3, 2019 | Canser</p>
-                        <a href="#">
-                            Annual Medical Conference brings <br> together many doctors ... </a>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/gades-photography-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Health Care</p>
+                            <a href="#">Weighing the risks and benefits of modern hormonal cont...</a>
+                        </div>
+                    </div>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/colegiul_medicilor-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Canser</p>
+                            <a href="#">
+                                Annual Medical Conference brings <br> together many doctors ... </a>
+                        </div>
+                    </div>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/rawpixe-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Diagnostic</p>
+                            <a href="#"> How a News Story Helped Her Get a Diagnosis </a>
+                        </div>
+                    </div>
+                    <div class="lastestNewsSlider ">
+                        <div class="lastestNewsCard text-center ">
+                            <img src="img/health_care-370x250.jpg" alt="">
+                            <p>April 3, 2019 | Diagnostic</p>
+                            <a href="#">Recommendations Developed for Psoriatic Arthritis Treat.. </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
     </div>
 
@@ -367,21 +402,24 @@
     <!-- CDN -->
     <!--Jquery  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
     <!--Bootstrap  -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
     <!-- Point -->
 
     <!-- Slick -->
     <script src="plugin/slick.js"></script>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="plugin/counterup.min.js"></script>
 
     <!-- Aos Js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- Personal Js -->
     <script src="Js/app.js"></script>
 </body>
